{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 35,
  "lineage": "851a2b64-4257-b638-5db5-20ea3baa07a7",
  "resources": [
    {
      "module": "module.Prod_ELB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:loadbalancer/net/Prod-NLB/762a7ad3a1692db7",
            "arn_suffix": "net/Prod-NLB/762a7ad3a1692db7",
            "dns_name": "Prod-NLB-762a7ad3a1692db7.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:343218201136:loadbalancer/net/Prod-NLB/762a7ad3a1692db7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Prod-NLB",
            "region": "us-east-2",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0110864e677c382ba"
              },
              {
                "subnet_id": "subnet-03b18e00698d5f667"
              },
              {
                "subnet_id": "subnet-05a514b124d270b4d"
              }
            ],
            "subnets": [
              "subnet-0110864e677c382ba",
              "subnet-03b18e00698d5f667",
              "subnet-05a514b124d270b4d"
            ],
            "tags": {
              "env": "Prod"
            },
            "tags_all": {
              "env": "Prod"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35",
            "zone_id": "ZLMOA37VPKANP"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:loadbalancer/net/Prod-NLB/762a7ad3a1692db7"
          },
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_ELB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:listener/net/Prod-NLB/762a7ad3a1692db7/b1665ed7bf5a92c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:343218201136:listener/net/Prod-NLB/762a7ad3a1692db7/b1665ed7bf5a92c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:loadbalancer/net/Prod-NLB/762a7ad3a1692db7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_ELB.aws_lb.test",
            "module.Prod_ELB.aws_lb_target_group.test_tg",
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_ELB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34",
            "arn_suffix": "targetgroup/Prod-DS-TG/4336679a91ecae34",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Prod-DS-TG",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_ELB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34-20250722122023846500000001",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34",
            "target_id": "i-0ad9e03a9f2ffa702"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_ELB.aws_lb_target_group.test_tg",
            "module.Prod_Ec2.aws_instance.PrivateInstance",
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34-20250722122023922100000002",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34",
            "target_id": "i-024079623dc789236"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_ELB.aws_lb_target_group.test_tg",
            "module.Prod_Ec2.aws_instance.PrivateInstance",
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34-20250722122024206500000003",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:343218201136:targetgroup/Prod-DS-TG/4336679a91ecae34",
            "target_id": "i-06560d9df3f15c7f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_ELB.aws_lb_target_group.test_tg",
            "module.Prod_Ec2.aws_instance.PrivateInstance",
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PrivateInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b05d988257befbbe",
            "arn": "arn:aws:ec2:us-east-2:343218201136:instance/i-0ad9e03a9f2ffa702",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad9e03a9f2ffa702",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Default_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb885fe64601b516",
            "private_dns": "ip-172-25-10-133.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.25.10.133",
            "public_dns": "ec2-18-118-141-253.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.141.253",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a3bd01a0a5df8c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6c35da7486e6055",
            "tags": {
              "Name": "Prod-DS-Private-Server-1"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0395eb3ad1129a4ca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b05d988257befbbe",
            "arn": "arn:aws:ec2:us-east-2:343218201136:instance/i-024079623dc789236",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024079623dc789236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Default_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bab2fe612dc9fe4b",
            "private_dns": "ip-172-25-20-141.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.25.20.141",
            "public_dns": "ec2-13-59-185-5.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.185.5",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03dc19c28e43c119a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb70fde874ec33e5",
            "tags": {
              "Name": "Prod-DS-Private-Server-2"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0395eb3ad1129a4ca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b05d988257befbbe",
            "arn": "arn:aws:ec2:us-east-2:343218201136:instance/i-06560d9df3f15c7f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06560d9df3f15c7f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Default_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b19a42f1780f5d41",
            "private_dns": "ip-172-25-30-59.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.25.30.59",
            "public_dns": "ec2-18-219-42-221.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.42.221",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6deb56cbe0d3ef7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d23f7f2607bfb5ea",
            "tags": {
              "Name": "Prod-DS-Private-Server-3"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-Server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0395eb3ad1129a4ca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b05d988257befbbe",
            "arn": "arn:aws:ec2:us-east-2:343218201136:instance/i-0f59a65c01f2ff7d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f59a65c01f2ff7d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Default_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06157b69ffd36c9cf",
            "private_dns": "ip-172-25-1-37.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.25.1.37",
            "public_dns": "ec2-3-144-250-143.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.250.143",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00be973a491a4599d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0110864e677c382ba",
            "tags": {
              "Name": "Prod-DS-Public-Server-1"
            },
            "tags_all": {
              "Name": "Prod-DS-Public-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0395eb3ad1129a4ca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC",
            "module.Prod_Security.aws_security_group.TEST_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Testeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d67a126447e9991",
            "arn": "arn:aws:ec2:us-east-2:343218201136:elastic-ip/eipalloc-08d67a126447e9991",
            "association_id": "eipassoc-0d204ad1ffcdd348b",
            "domain": "vpc",
            "id": "eipalloc-08d67a126447e9991",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05e9c5b8b2d925acf",
            "private_dns": "ip-172-25-1-231.us-east-2.compute.internal",
            "private_ip": "172.25.1.231",
            "public_dns": "ec2-3-22-92-161.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.92.161",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Prod_Nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TestNGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d67a126447e9991",
            "association_id": "eipassoc-0d204ad1ffcdd348b",
            "connectivity_type": "public",
            "id": "nat-0d53b78e14f3bfa26",
            "network_interface_id": "eni-05e9c5b8b2d925acf",
            "private_ip": "172.25.1.231",
            "public_ip": "3.22.92.161",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0110864e677c382ba",
            "tags": {
              "Name": "Prod-DS-NGW"
            },
            "tags_all": {
              "Name": "Prod-DS-NGW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Nat.aws_eip.Testeip",
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Test-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:internet-gateway/igw-0e8171e3868bfa730",
            "id": "igw-0e8171e3868bfa730",
            "owner_id": "343218201136",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-IGW"
            },
            "tags_all": {
              "Name": "Prod-DS-IGW"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e03257412e4c81791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d53b78e14f3bfa26",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0e03257412e4c8179",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Nat.aws_eip.Testeip",
            "module.Prod_Nat.aws_nat_gateway.TestNGW",
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Private-Route",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Test-Private-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:route-table/rtb-0e03257412e4c8179",
            "id": "rtb-0e03257412e4c8179",
            "owner_id": "343218201136",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d53b78e14f3bfa26",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod-DS-Private-RTB"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Test-Public-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:route-table/rtb-0c191b0eebd23a525",
            "id": "rtb-0c191b0eebd23a525",
            "owner_id": "343218201136",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8171e3868bfa730",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod-DS-Public-RTB"
            },
            "tags_all": {
              "Name": "Prod-DS-Public-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6fdbf56dc0542ad",
            "region": "us-east-2",
            "route_table_id": "rtb-0e03257412e4c8179",
            "subnet_id": "subnet-0d6c35da7486e6055"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Private-Route",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02832d4efa92fe260",
            "region": "us-east-2",
            "route_table_id": "rtb-0e03257412e4c8179",
            "subnet_id": "subnet-0bb70fde874ec33e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Private-Route",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dd96b7a1274ff0a",
            "region": "us-east-2",
            "route_table_id": "rtb-0e03257412e4c8179",
            "subnet_id": "subnet-0d23f7f2607bfb5ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Private-Route",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d4d79a59e529b1a",
            "region": "us-east-2",
            "route_table_id": "rtb-0c191b0eebd23a525",
            "subnet_id": "subnet-0110864e677c382ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f0032e02104ec55",
            "region": "us-east-2",
            "route_table_id": "rtb-0c191b0eebd23a525",
            "subnet_id": "subnet-03b18e00698d5f667"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe9fa9f1b2d73a6",
            "region": "us-east-2",
            "route_table_id": "rtb-0c191b0eebd23a525",
            "subnet_id": "subnet-05a514b124d270b4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_route_table.Test-Public-Route",
            "module.Prod_Network.aws_subnet.Test-Private-Subnet",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Test-Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:subnet/subnet-0d6c35da7486e6055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6c35da7486e6055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218201136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-Subnet-1"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:subnet/subnet-0bb70fde874ec33e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb70fde874ec33e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218201136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-Subnet-2"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:subnet/subnet-0d23f7f2607bfb5ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.25.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d23f7f2607bfb5ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218201136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-Private-Subnet-3"
            },
            "tags_all": {
              "Name": "Prod-DS-Private-Subnet-3"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_subnet.Test-Public-Subnet",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Test-Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:subnet/subnet-0110864e677c382ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0110864e677c382ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218201136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Prod-DS-Public-Subnet-1"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:subnet/subnet-03b18e00698d5f667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b18e00698d5f667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218201136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Prod-DS-Public-Subnet-2"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:subnet/subnet-05a514b124d270b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.25.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a514b124d270b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218201136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS-Public-Subnet-3"
            },
            "tags_all": {
              "Name": "Prod-DS-Public-Subnet-3"
            },
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_internet_gateway.Test-IGW",
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Prod_Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Test-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:vpc/vpc-0f19e748c5ac39c35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.0.0/16",
            "default_network_acl_id": "acl-0ff500eb612bba813",
            "default_route_table_id": "rtb-0566ecd7df2d59fe0",
            "default_security_group_id": "sg-0b5973b512d37751c",
            "dhcp_options_id": "dopt-09d2178abf5eefdeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f19e748c5ac39c35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0566ecd7df2d59fe0",
            "owner_id": "343218201136",
            "region": "us-east-2",
            "tags": {
              "Name": "Prod-DS"
            },
            "tags_all": {
              "Name": "Prod-DS"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Prod_Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218201136:security-group/sg-0395eb3ad1129a4ca",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0395eb3ad1129a4ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AllTraffic",
            "name_prefix": "",
            "owner_id": "343218201136",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Prod-DS-PublicSG",
              "env": "Prod"
            },
            "tags_all": {
              "Name": "Prod-DS-PublicSG",
              "env": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19e748c5ac39c35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Prod_Network.aws_vpc.Test-VPC"
          ]
        }
      ]
    }
  ]
}